invalid_bool_test/invalid_bool_test_3.src
.IPPcode24
WRITE bool@bonjour